--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,68 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
-
-    <TextView
-            android:id="@+id/textLogo"
-            android:layout_gravity="top|center"
-            android:textAlignment="center"
-            android:textSize="50sp"
-            android:text="Gimex"
-            android:fontFamily="sans-serif-black"
-
-            android:background="@color/cadmium_violet"
-            android:textColor="#BEE7D2"
-            android:textStyle="bold"
+        android:orientation="vertical"
+        tools:context="com.example.androidjavadatamatrixscan1csoapclient.MainActivity"
+        android:background="@color/white"
+        android:textColor="@color/black">
+    <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/layout_result"
-            android:orientation="vertical"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-        <ImageView
-                android:src="@drawable/datamatrix"
-                android:layout_width="200dp"
-                android:layout_height="200dp"/>
-
-        <TextView
-                android:id="@+id/textResult"
-                android:layout_marginTop="16dp"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottomAppBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:backgroundTint="@color/cadmium_violet"
-        app:fabCradleMargin="10dp"
-        app:fabCradleRoundedCornerRadius="10dp"
-        app:fabCradleVerticalOffset="10dp"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/app_name"
-            android:backgroundTint="@color/cadmium_violet"
-            app:tint="@android:color/white"
-            android:src="@drawable/qr_scan"
-            app:layout_anchor="@+id/bottomAppBar"
-            app:layout_anchorGravity="top|center"/>
+            tools:context="com.example.androidjavadatamatrixscan1csoapclient.MainActivity"
+            android:orientation="horizontal"
+            android:id="@+id/processes_list_topper"
+            android:background="@color/black">
+        <TextView
+                android:id="@+id/processes_item_number"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:text="Номер"
+                android:fontFamily="sans-serif-black"
+                android:textStyle="bold"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="2"
+                android:textColor="@color/white"
+        />
+        <TextView
+                android:id="@+id/processes_item_date"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:text="Дата"
+                android:fontFamily="sans-serif-black"
+                android:textStyle="bold"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="2"
+                android:textColor="@color/white"
+        />
+        <TextView
+                android:id="@+id/processes_item_block"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:text="Блок"
+                android:fontFamily="sans-serif-black"
+                android:textStyle="bold"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:textColor="@color/white"
+        />
+    </LinearLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/swipeRefreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="10">
+
+        <FrameLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context="com.fragment">
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/list"
+                    android:background="@color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+            </androidx.recyclerview.widget.RecyclerView>
+            <Button
+                    android:text="⚙️"
+                    android:textSize="45sp"
+                    android:id="@+id/button_settings"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    android:layout_gravity="bottom|right"/>
+        </FrameLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+</LinearLayout>
