--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -2,186 +2,268 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:orientation="vertical">
-
-    <TextView
-            android:id="@+id/textLogo"
-            android:layout_gravity="top|center"
-            android:textAlignment="center"
-            android:autoSizeTextType="uniform"
-            android:text="Gimex Scanner"
-            android:fontFamily="sans-serif-black"
-
-            android:background="@color/cadmium_violet"
-            android:textColor="#BEE7D2"
-            android:textStyle="bold"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+        tools:context="com.example.androidjavadatamatrixscan1csoapclient.ProcessActivity"
+        android:orientation="vertical"
+        android:id="@+id/activity_scan_layout"
+        android:background="#FFFFFF">
 
     <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:orientation="vertical"
-            tools:context=".MainActivity"
+            android:orientation="horizontal"
+            tools:context="com.example.androidjavadatamatrixscan1csoapclient.ProcessActivity"
+            android:id="@+id/process_info"
             android:layout_weight="10">
 
         <LinearLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:orientation="horizontal"
-                tools:context=".MainActivity"
-                android:layout_weight="1">
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                tools:context="com.example.androidjavadatamatrixscan1csoapclient.ProcessActivity"
+                android:layout_weight="7">
+
             <TextView
-                    android:text="1"
+                    android:text="Номер документа"
+                    android:id="@+id/doc_number_title"
+                    android:gravity="center|start"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:paddingLeft="15dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
+            <TextView
+                    android:text="Дата документа"
+                    android:id="@+id/doc_date_title"
+                    android:gravity="center|start"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:paddingLeft="15dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
+            <TextView
+                    android:text="Номер процесса"
+                    android:id="@+id/process_number_title"
+                    android:gravity="center|start"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:paddingLeft="15dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
+            <TextView
+                    android:text="Дата процесса"
+                    android:id="@+id/process_date_title"
+                    android:gravity="center|start"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:paddingLeft="15dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
+            <TextView
+                    android:text="Организация"
+                    android:id="@+id/organization_title"
+                    android:gravity="center|start"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:paddingLeft="15dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
+            <TextView
+                    android:text="Контрагент"
+                    android:id="@+id/contragent_title"
+                    android:gravity="center|start"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:paddingLeft="15dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
+            <TextView
+                    android:text="Всего ШК"
+                    android:id="@+id/datamatrix_sum_title"
+                    android:gravity="center|start"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:paddingLeft="15dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
+            <TextView
+                    android:text="Текущие ШК"
+                    android:id="@+id/datamatrix_scanned_now_title"
+                    android:gravity="center|start"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:paddingLeft="15dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"/>
+        </LinearLayout>
+
+        <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                tools:context="com.example.androidjavadatamatrixscan1csoapclient.ProcessActivity"
+                android:layout_weight="10">
+
+            <TextView
+                    tools:text="000001"
                     android:id="@+id/doc_number"
-                    android:layout_gravity="top|center"
-                    android:textAlignment="center"
-                    android:autoSizeTextType="uniform"
-                    android:layout_height="match_parent"
-                    android:layout_width="0dp"
-                    android:layout_weight="1">
-
+                    android:gravity="center"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
             <TextView
-                    android:text="1"
+                    tools:text="21.09.1997"
                     android:id="@+id/doc_date"
-                    android:layout_gravity="top|center"
-                    android:textAlignment="center"
-                    android:autoSizeTextType="uniform"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
-        </LinearLayout>
-        <LinearLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:orientation="horizontal"
-                tools:context=".MainActivity"
-                android:layout_weight="1">
+                    android:gravity="center"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
             <TextView
-                    android:text="1"
+                    tools:text="00000М-Д00001"
                     android:id="@+id/process_number"
-                    android:layout_gravity="top|center"
-                    android:textAlignment="center"
-                    android:autoSizeTextType="uniform"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
-
+                    android:gravity="center"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
             <TextView
-                    android:text="1"
-                    android:id="@+id/process_data"
-                    android:layout_gravity="top|center"
-                    android:textAlignment="center"
-                    android:autoSizeTextType="uniform"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
-        </LinearLayout>
-        <TextView
-                android:text="1"
-                android:id="@+id/organization"
-                android:layout_gravity="top|center"
-                android:textAlignment="center"
-                android:autoSizeTextType="uniform"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
-        <TextView
-                android:text="1"
-                android:id="@+id/contragent"
-                android:layout_gravity="top|center"
-                android:textAlignment="center"
-                android:autoSizeTextType="uniform"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
-        <LinearLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:orientation="horizontal"
-                tools:context=".MainActivity"
-                android:layout_weight="2">
+                    tools:text="21.09.1997"
+                    android:id="@+id/process_date"
+                    android:gravity="center"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
             <TextView
-                    android:text="1"
+                    tools:text="ИП Петров"
+                    android:id="@+id/organization"
+                    android:gravity="center"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
+            <TextView
+                    tools:text="ИП Иванов"
+                    android:id="@+id/contragent"
+                    android:gravity="center"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
+            <TextView
+                    tools:text="122223"
                     android:id="@+id/datamatrix_sum"
-                    android:layout_gravity="top|center"
-                    android:textAlignment="center"
-                    android:autoSizeTextType="uniform"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
+                    android:gravity="center"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"
+                    android:background="@drawable/border_bottom"/>
             <TextView
-                    android:text="1"
+                    tools:text="1"
                     android:id="@+id/datamatrix_scanned_now"
-                    android:layout_gravity="top|center"
-                    android:textAlignment="center"
-                    android:autoSizeTextType="uniform"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
+                    android:gravity="center"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"/>
         </LinearLayout>
+
     </LinearLayout>
 
-    <TextView
-            android:id="@+id/bottomAppBar"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="bottom"
-            android:backgroundTint="@color/cadmium_violet"
-            android:layout_weight="1">
-    </TextView>
-
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        tools:context="com.example.androidjavadatamatrixscan1csoapclient.ProcessActivity"
+        android:id="@+id/buttons"
+        android:layout_weight="4">
     <Button
             android:text="Отсканировать"
-            android:autoSizeTextType="uniform"
             android:id="@+id/start_scan"
-            android:contentDescription="@string/app_name"
-            android:backgroundTint="@color/cadmium_violet"
+            android:backgroundTint="#66a37c"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:gravity="center"/>
     <Button
-            android:text="Снять блокировку процесса"
-            android:autoSizeTextType="uniform"
-            android:id="@+id/unblock"
-            android:contentDescription="@string/app_name"
-            android:backgroundTint="@color/cadmium_violet"
+            android:text="Заблокировать"
+            android:id="@+id/block"
+            android:backgroundTint="#66a37c"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:gravity="center"/>
+
     <Button
             android:text="Завершить сканирование"
-            android:autoSizeTextType="uniform"
             android:id="@+id/stop_scan"
-            android:contentDescription="@string/app_name"
-            android:backgroundTint="@color/cadmium_violet"
+            android:backgroundTint="#66a37c"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:gravity="center"/>
     <Button
             android:text="Отправить штрихкоды"
-            android:autoSizeTextType="uniform"
+            android:gravity="center"
             android:id="@+id/send_Datamatrix"
-            android:backgroundTint="@color/cadmium_violet"
-            android:contentDescription="@string/app_name"
+            android:backgroundTint="#66a37c"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"/>
+    </LinearLayout>
 </LinearLayout>
